# ProgrammingForRobotics

./: README.md  test.cpp
Assignment2/: README.txt  assignment2.cpp  generateMaze.cpp  header.h  printMaze.cpp  test.cpp  traverseMaze.cpp
Assignment2/Assignment2.1/: arrays.cpp  assignment2.cpp  generateMaze.cpp  header.h  printMaze.cpp
Assignment3/: README.md
Assignment3/linkedlist/: fillList.cpp  header.h  main.cpp
Assignment3/linkedlist/Test/: List.h
Assignment3/tree/include/: Tree.h
Assignment3/tree/src/: main.cpp
Assignment4/assignment4.1/: Costumer.cpp  Package.cpp  Package.h  README.txt  TwoDayPackage.cpp  main.cpp
Assignment4/assignment4.1/include/: Package.h
Assignment4/assignment4.1/src/: Package.cpp  main.cpp
Assignment4/assignment4.2/: Customer.cpp
Assignment4/assignment4.2/include/: Package.h  PrivateCustomer.h
Assignment4/assignment4.2/src/: Package.cpp  main.cpp
Assignment5/: README.txt
Assignment5/assignment5.1/: README.txt
Assignment5/assignment5.1/include/: DrawContour.h  DrawContourMarching.h  DrawContourScanning.h
Assignment5/assignment5.1/src/: DrawContourMarching.cpp  DrawContourMarchingBetter.cpp  DrawContourScanning.cpp  DrawContourScanningThreaded.cpp  UI.cpp  main.cpp
Assignment5/assignment5.4/include/: DrawContour.h  DrawContourScanning.h  DrawContourScanningThreaded.h
Assignment5/assignment5.4/src/: DrawContourScanning.cpp  DrawContourScanningThreaded.cpp
Assignment5/include/: DrawContourMarching.h  DrawContourMarchingBetter.h  DrawContourScanning.h  DrawContourScanningThreaded.h
Assignment5/src/: DrawContourMarching.cpp  DrawContourMarchingBetter.cpp  DrawContourScanning.cpp  DrawContourScanningThreaded.cpp  main.cpp
Backup/Assignment5/: README.txt
Backup/Assignment5/assignment5.1/include/: DrawContourScanning.h
Backup/Assignment5/assignment5.1/src/: DrawContourScanning.cpp
Backup/Assignment5/assignment5.4/include/: DrawContour.h  DrawContourScanning.h  DrawContourScanningThreaded.h
Backup/Assignment5/assignment5.4/src/: main.cpp
Backup/Assignment5/include/: DrawContour.h
Backup/Assignment5/src/: DrawContourMarching.cpp  main.cpp
Backup/assignment4/assignment4.1/include/: TwoDayPackage.h
Backup/assignment4/assignment4.1/resources/: PackageDiagram.uxf
Backup/assignment4/assignment4.1/src/: OvernightPackage.cpp  TwoDayPackage.cpp
Backup/assignment4/assignment4.2/: README.txt
Backup/assignment4/assignment4.2/include/: BusinessCustomer.h  Customer.h  OvernightPackage.h
Backup/assignment4/assignment4.2/src/: BusinessCostumer.cpp  Customer.cpp  PrivateCustomer.cpp  main.cpp
Backup/fix/: Package.cpp  Package.h  main.cpp
Backup/fix - remove option/: OvernightPackage.cpp  OvernightPackage.h  Package.cpp  Package.h  PackageDiagram.drawio  TwoDayPackage.cpp  TwoDayPackage.h  main.cpp
Backup/v0/: OvernightPackage.cpp  Package.h  TwoDayPackage.h  main.cpp
Backup/v1/assignment4.1/: OvernightPackage.h
Backup/v1/assignment4.2/: Customer.h  main.cpp
Final Assignment/install/: local_setup.sh  setup.sh
Final Assignment/install/image_functions_sdfr/share/image_functions_sdfr/: local_setup.sh  package.sh
Final Assignment/install/ros2_introduction/lib/ros2_introduction/: brightness_detection
Final Assignment/install/ros2_introduction/share/ros2_introduction/: package.sh
Final Assignment/log/: latest_build  latest_list
Final Assignment/src/ros2_introduction/src/: brightness_detection.cpp
Jasper/: README.txt  assignment2.cpp  findStart.cpp  header.h  printMaze.cpp  traverseMaze.cpp
Test/: Costumer.h  OvernightPackage.cpp  OvernightPackage.h  Package.cpp  TwoDayPackage.cpp
sdfr_ws/install/ball_detection/lib/ball_detection/: find_ball
sdfr_ws/install/robot_image_messages/share/robot_image_messages/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
sdfr_ws/install/robot_image_messages/share/robot_image_messages/cmake/: ament_cmake_export_targets-extras.cmake  export_robot_image_messages__rosidl_generator_cppExport.cmake  export_robot_image_messages__rosidl_generator_pyExport-noconfig.cmake  export_robot_image_messages__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_robot_image_messages__rosidl_typesupport_fastrtps_cExport.cmake  export_robot_image_messages__rosidl_typesupport_fastrtps_cppExport.cmake  robot_image_messagesConfig.cmake  robot_image_messages__rosidl_typesupport_cppExport-noconfig.cmake  robot_image_messages__rosidl_typesupport_cppExport.cmake  robot_image_messages__rosidl_typesupport_introspection_cExport-noconfig.cmake  robot_image_messages__rosidl_typesupport_introspection_cExport.cmake  robot_image_messages__rosidl_typesupport_introspection_cppExport-noconfig.cmake  robot_image_messages__rosidl_typesupport_introspection_cppExport.cmake
sdfr_ws/install/robot_image_messages/share/robot_image_messages/msg/: BallOutput.idl  Brightness.idl
sdfr_ws/log/: latest_build  latest_list
sdfr_ws/src/ball_detection/: CHANGELOG.rst  CMakeLists.txt
sdfr_ws/src/ball_detection/include/ball_detection/: find_ball.hpp  image_processing.hpp
sdfr_ws/src/ball_detection/src/: find_ball.cpp  image_processing.cpp
sdfr_ws/src/ball_detection_message/: CHANGELOG.rst  CMakeLists.txt  package.xml
sdfr_ws/src/motion_controller/: CHANGELOG.rst  CMakeLists.txt
sdfr_ws/src/motion_controller/include/motion_controller/: bounding_box_controller.hpp  differential_drive_controller.hpp
sdfr_ws/src/motion_controller/launch/: start_robot.launch.py
sdfr_ws/src/motion_controller/src/: bounding_box_controller.cpp  differential_drive_controller.cpp
sdfr_ws/src/robot_image_messages/: CHANGELOG.rst  CMakeLists.txt
sdfr_ws/src/ros2_introduction/: CMakeLists.txt  package.xml
sdfr_ws/src/ros2_introduction/include/ros2_introduction/: brightness_detection.hpp  brightness_detection_message.hpp
sdfr_ws/src/ros2_introduction/src/: brightness_detection.cpp  brightness_detection_message.cpp
sdfr_ws/src/ros2_introduction_message/: CHANGELOG.rst  CMakeLists.txt  package.xml
sdfr_ws/src/ros2_introduction_message/msg/: Brightness.msg
(+118 files in other folders)
