<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_image_messages</name>
    <version>1.0.0</version>
    <description>This is the ROS 2 package for the custom messages of the SDFR Final Assignment. This package was modified by group: 08.</description>
    <maintainer email="ljkoreeda@gmail.com">Lucas Koreeda</maintainer>
    <maintainer email="j.j.blank@student.utwente.nl">Jasper Blank</maintainer>
    <license>BSD</license>
    <author email="j.h.j.pott@student.utwente.nl">Jurrijn Pott</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
